Fixed item list layout collapse

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -977,6 +977,7 @@ h1 {
 }
 
 .item-box {
+  margin-top: 2px;
   padding: 0.5em 1em;
   margin: 2em 0;
   margin-left: 20px;
